--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xinle Cao"
-description              : ""Failure runs through the entire process, which is life. ""
+description              : "\"Failure runs through the entire process, which is life. \""
 repository               : "XinleCao/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
