--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : https://github.com/XinleCao
+  github           : XinleCao
   google_plus      :
   keybase          :
   instagram        :
