--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 title                    : "Xinle Cao"
 description              : "\"Failure runs through the entire process, which is life. \""
 repository               : "XinleCao/acad-homepage.github.io"
-google_scholar_stats_use_cdn : False
+google_scholar_stats_use_cdn : True
 
 # google analytics
-google_analytics_id      :  G-C015ECEE05
+google_analytics_id      :  
 # SEO Related
 google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
 bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
