--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xinle Cao"
-description              : "\"Failure runs through the entire process, which is life. \""
+description              : "\" 少年爬上城墙，去见他的月亮 \""
 repository               : "XinleCao/acad-homepage.github.io"
 google_scholar_stats_use_cdn : True
 
