--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xinle Cao"
-description              : "\" 如梦\ 如梦\ \月光在她双目 \""
+description              : "\" 如梦 如梦 月光在她双目 \""
 repository               : "XinleCao/acad-homepage.github.io"
 google_scholar_stats_use_cdn : True
 
