--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xinle Cao"
-description              : "\" 像纸笔，像雨滴 \""
+description              : "\" 悲欢之中镌刻我\ 姓名 \""
 repository               : "XinleCao/acad-homepage.github.io"
 google_scholar_stats_use_cdn : True
 
